# briinim

./: .gitignore  CMakeLists.txt  README.md
data/: cards.json
src/: CardsDB.cpp  CardsDB.h  briinim.cpp  globals.cpp  globals.h
src/card/: Attribute.cpp  Attribute.h  Card.cpp  Card.h  Effect.h  Species.cpp  Species.h  Spell.cpp  Spell.h  Unit.cpp  Unit.h
src/game/: Board.cpp  Board.h  Game.cpp  Game.h  Reactor.cpp  Reactor.h  Team.cpp  Team.h
src/game/action/: Action.h  Attack.cpp  Attack.h  Call.cpp  Call.h  EndTurn.h  Move.cpp  Move.h
src/player/: Deck.cpp  Deck.h  DeckRecipe.cpp  DeckRecipe.h  Player.cpp  Player.h  Profile.cpp  Profile.h
src/player/brain/: Brain.cpp  Brain.h  Human.cpp  Human.h
src/user_interface/: Console.cpp  Console.h  UserInterface.cpp  UserInterface.h
src/utils/logs/: Logger.cpp  Logger.h  ScopeLogger.cpp  ScopeLogger.h
